--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,4 +1,4 @@
-name: Build
+name: Publish
 
 concurrency: production
 
@@ -8,7 +8,7 @@ on:
       - main
 
 jobs:
-  build:
+  publish:
 
     runs-on: ubuntu-latest
 
@@ -17,11 +17,9 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.7'
-      - name: Test
-        run: python3 -m unittest
       - name: Build
         run: |
-          python3 -m pip install --upgrade build
+          python3 -m pip install build
           python3 -m build
       - name: Publish
         uses: pypa/gh-action-pypi-publish@release/v1
