--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,5 +16,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.7'
+      - name: Format
+        run: |
+          python3 -m pip install black
+          python3 -m black --check --line-length 120 .
+      - name: Lint
+        run: |
+          python3 -m pip install mypy
+          python3 -m mypy -p src --disallow-untyped-defs
+          python3 -m mypy -p tests --disallow-untyped-defs
       - name: Test
         run: python3 -m unittest
