--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          lfs: true
+      - name: Checkout
+        run: git lfs checkout
       - uses: actions/setup-python@v4
         with:
           python-version: '3.7'
