--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-src/simple_nlp_library/data/glove-wiki-gigaword-50 filter=lfs diff=lfs merge=lfs -text
+src/simple_nlp_library/data/glove.6B.50d.txt filter=lfs diff=lfs merge=lfs -text
